--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tabs Section</title>
 </head>
 <body>
-    
+    <div class="section-center">
+        <div class="image">
+            <img src="" alt="">
+        </div>
+        <div class="tabs">
+            <button class="button">Step 1</button>
+            <button class="button">Step 2</button>
+            <button class="button">Step 3</button>
+        </div>
+        <div class="tabs-content">
+            <div class="content">
+                <h1>Step 1</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime corporis magnam repudiandae, cum molestiae quisquam quos doloribus rem laboriosam voluptas perspiciatis voluptate ipsa eius qui quod optio ea, dolore aperiam id. Ad blanditiis, reprehenderit labore esse voluptatem nisi. Inventore nihil distinctio amet iure quo vel ipsa eaque fugit. Fugit necessitatibus obcaecati earum delectus assumenda commodi libero id odit repellendus, veniam excepturi nobis laborum facilis dolores enim culpa blanditiis! Non aperiam mollitia enim esse veniam sed quam! Quos eligendi veritatis, totam dolor molestiae quis perferendis soluta eum at officiis! Maxime quibusdam labore mollitia, dolorum tempora iusto consectetur libero. Consectetur, adipisci expedita.</p>
+            </div>
+            <div class="content">
+                <h1>Step 2</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime corporis magnam repudiandae, cum molestiae quisquam quos doloribus rem laboriosam voluptas perspiciatis voluptate ipsa eius qui quod optio ea, dolore aperiam id. Ad blanditiis, reprehenderit labore esse voluptatem nisi. Inventore nihil distinctio amet iure quo vel ipsa eaque fugit. Fugit necessitatibus obcaecati earum delectus assumenda commodi libero id odit repellendus, veniam excepturi nobis laborum facilis dolores enim culpa blanditiis! Non aperiam mollitia enim esse veniam sed quam! Quos eligendi veritatis, totam dolor molestiae quis perferendis soluta eum at officiis! Maxime quibusdam labore mollitia, dolorum tempora iusto consectetur libero. Consectetur, adipisci expedita.</p>
+            </div>
+            <div class="content">
+                <h1>Step 3</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime corporis magnam repudiandae, cum molestiae quisquam quos doloribus rem laboriosam voluptas perspiciatis voluptate ipsa eius qui quod optio ea, dolore aperiam id. Ad blanditiis, reprehenderit labore esse voluptatem nisi. Inventore nihil distinctio amet iure quo vel ipsa eaque fugit. Fugit necessitatibus obcaecati earum delectus assumenda commodi libero id odit repellendus, veniam excepturi nobis laborum facilis dolores enim culpa blanditiis! Non aperiam mollitia enim esse veniam sed quam! Quos eligendi veritatis, totam dolor molestiae quis perferendis soluta eum at officiis! Maxime quibusdam labore mollitia, dolorum tempora iusto consectetur libero. Consectetur, adipisci expedita.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
